src/test/deca/context/invalid/homemade/print_bool.deca
// Description :
//test of print of a boolean variable
//
// Resultats :
//Erreur contextuelle
//Ligne <9> : <Cannot print expression of type boolean>
{
   boolean a = true;
   println(a);

}